force-app/main/default/objects/Trigger_Settings__c/Trigger_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting is used to enable/disable all apex triggers</description>
    <label>Trigger Settings</label>
</CustomObject>