force-app/main/default/objects/Trigger_Settings__c/fields/Bypass_Totango__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Totango__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Totango</label>
    <type>Checkbox</type>
</CustomField>