force-app/main/default/objects/Trigger_Settings__c/fields/Inactivate_SetAccountDefaultRegion__c.field-meta.xml
<CustomField>
    <fullName>Inactivate_SetAccountDefaultRegion__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is used to inactivate SetAccountDefaultRegion trigger. Please set this as True if you want to inactivate SetAccountDefaultRegion trigger</inlineHelpText>
    <label>Inactivate SetAccountDefaultRegion</label>
    <type>Checkbox</type>
</CustomField>