force-app/main/default/objects/Trigger_Settings__c/fields/InactivateCheckAssignmentRuleOnLead__c.field-meta.xml
<CustomField>
    <fullName>InactivateCheckAssignmentRuleOnLead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to inactivate CheckAssignmentRuleOnLead trigger. Please set this as True if you want to inactivate CheckAssignmentRuleOnLead trigger</description>
    <label>InactivateCheckAssignmentRuleOnLead</label>
    <type>Checkbox</type>
</CustomField>