force-app/main/default/objects/Trigger_Settings__c/fields/InactivateCheckSalesRepExceptionOnComp__c.field-meta.xml
<CustomField>
    <fullName>InactivateCheckSalesRepExceptionOnComp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to inactivate CheckSalesRepExceptionOnCompany trigger. Please set this as True if you want to inactivate CheckSalesRepExceptionOnCompany trigger</description>
    <label>InactivateCheckSalesRepExceptionOnComp</label>
    <type>Checkbox</type>
</CustomField>