force-app/main/default/objects/Trigger_Settings__c/fields/InactivateCreateCampaignHistoryFromLead__c.field-meta.xml
<CustomField>
    <fullName>InactivateCreateCampaignHistoryFromLead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to inactivate CreateCampaignHistoryFromLead trigger. Please set this as True if you want to inactivate CreateCampaignHistoryFromLead trigger</description>
    <inlineHelpText>This is used to inactivate CreateCampaignHistoryFromLead trigger. Please set this as True if you want to inactivate CreateCampaignHistoryFromLead trigger</inlineHelpText>
    <label>InactivateCreateCampaignHistoryFromLead</label>
    <type>Checkbox</type>
</CustomField>