force-app/main/default/objects/Trigger_Settings__c/fields/InactivateSetAccountPartnerRelationship__c.field-meta.xml
<CustomField>
    <fullName>InactivateSetAccountPartnerRelationship__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to inactivate SetAccountPartnerRelationshipOnCompany trigger. Please set this as True if you want to inactivate SetAccountPartnerRelationshipOnCompany  trigger</description>
    <inlineHelpText>This is used to inactivate SetAccountPartnerRelationshipOnCompany trigger. Please set this as True if you want to inactivate SetAccountPartnerRelationshipOnCompany  trigger</inlineHelpText>
    <label>InactivateSetAccountPartnerRelationship</label>
    <type>Checkbox</type>
</CustomField>