force-app/main/default/objects/Trigger_Settings__c/fields/InactivateSetAccountStatusOnOpportunity__c.field-meta.xml
<CustomField>
    <fullName>InactivateSetAccountStatusOnOpportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to inactivate SetAccountStatusOnOpportunity trigger. Please set this as True if you want to inactivate SetAccountStatusOnOpportunity trigger</description>
    <label>InactivateSetAccountStatusOnOpportunity</label>
    <type>Checkbox</type>
</CustomField>