force-app/main/default/objects/Trigger_Settings__c/fields/InactivateSetAccountTeamRollup__c.field-meta.xml
<CustomField>
    <fullName>InactivateSetAccountTeamRollup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to inactivate InactivateSetAccountTeamRollup trigger. Please set this as True if you want to inactivate InactivateSetAccountTeamRollup trigger</description>
    <inlineHelpText>This is used to inactivate InactivateSetAccountTeamRollup trigger. Please set this as True if you want to inactivate InactivateSetAccountTeamRollup trigger</inlineHelpText>
    <label>InactivateSetAccountTeamRollup</label>
    <type>Checkbox</type>
</CustomField>