force-app/main/default/objects/Trigger_Settings__c/fields/InactivateSetDefaultEventValuesFromOwner__c.field-meta.xml
<CustomField>
    <fullName>InactivateSetDefaultEventValuesFromOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to inactivate SetDefaultEventValuesFromOwner trigger. Please set this as True if you want to inactivate SetDefaultEventValuesFromOwner trigger.</description>
    <inlineHelpText>This is used to inactivate SetDefaultEventValuesFromOwner trigger. Please set this as True if you want to inactivate SetDefaultEventValuesFromOwner trigger.</inlineHelpText>
    <label>InactivateSetDefaultEventValuesFromOwner</label>
    <type>Checkbox</type>
</CustomField>