force-app/main/default/objects/Trigger_Settings__c/fields/InactivateSetDefaultLeadRegionField__c.field-meta.xml
<CustomField>
    <fullName>InactivateSetDefaultLeadRegionField__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is used to inactivate SetDefaultLeadRegionField trigger. Please set this as True if you want to inactivate SetAccountDefaultRegion trigger</inlineHelpText>
    <label>InactivateSetDefaultLeadRegionField</label>
    <type>Checkbox</type>
</CustomField>