force-app/main/default/objects/Trigger_Settings__c/fields/InactivateSetDefaultOpportunityRegionFie__c.field-meta.xml
<CustomField>
    <fullName>InactivateSetDefaultOpportunityRegionFie__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is used to inactivate SetDefaultOpportunityRegionField trigger. Please set this as True if you want to inactivate SetAccountDefaultRegion trigger</inlineHelpText>
    <label>InactivateSetDefaultOpportunityRegionFie</label>
    <type>Checkbox</type>
</CustomField>