force-app/main/default/objects/Trigger_Settings__c/fields/InactivateUpdateExistingLeadsAndContacts__c.field-meta.xml
<CustomField>
    <fullName>InactivateUpdateExistingLeadsAndContacts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is used to inactivate UpdateExistingLeadsAndContacts trigger. Please set this as True if you want to inactivate SetAccountDefaultRegion trigger</inlineHelpText>
    <label>InactivateUpdateExistingLeadsAndContacts</label>
    <type>Checkbox</type>
</CustomField>